2005-12-23  Han-Wen Nienhuys  <hanwen@xs4all.nl>

	* lily/slur-configuration.cc (score_extra_encompass): don't use
	bound->column() == avoid->column() for checking extents, as this
	doesn't work for accidentals. 

	* lily/slur-engraver.cc (acknowledge_extra_object): remove
	DynamicText hardcoding.

	* lily/slur-scoring.cc (enumerate_attachments): robustness: don't
	crash if bound stem is NULL

	* lily/piano-pedal-performer.cc: patch by MWD for enabling piano
	pedals.

2005-12-22  Graham Percival  <gpermus@gmail.com>

	* scm/define-markup-commands.scm: typo.  @code{\raise}
	=> @code{\\raise}.

	* darwin.patch: now used again, includes a
	required patch from fink.

2005-12-21  Heikki Junes  <hjunes@cc.hut.fi>

	* po/TODO: mention gtranslator along with kbabel.
	* po/fi.po: update translations.

2005-12-21  Jan Nieuwenhuizen  <janneke@gnu.org>

	* lily/relocate.cc (setup_paths): Bugfix.

2005-12-21  Han-Wen Nienhuys  <hanwen@xs4all.nl>

	* lily/slur-configuration.cc (score_extra_encompass): don't use
	"avoid" choice for avoid-slur.

	* stepmake/bin/install.py (dest): don't create existing dir.

2005-12-21  Jan Nieuwenhuizen  <janneke@gnu.org>

	* stepmake/bin/install.py: Remove file before copying.

	* config.make.in: 
	* stepmake/aclocal.m4: Do not substitute INSTALL.

2005-12-21  Han-Wen Nienhuys  <hanwen@xs4all.nl>

	* GNUmakefile.in ($(tree-share-prefix)/mf-link-tree link-mf-tree):
	depend on link-tree.

	* lily/relocate.cc (setup_paths): only check path for non-absolute
	dir without directory part.

	* flower/file-name.cc (is_absolute):  new method.
	(is_absolute): check root_ too.

2005-12-21  Jan Nieuwenhuizen  <janneke@gnu.org>

	* lily/relocate.cc (setup_paths) [__MINGW32__]: Comment-out broken
	relocation code.  Oops, don't comment out too much.

	* stepmake/stepmake/generic-vars.make (INSTALL): Assign INSTALL_PY
	iso itself.

	* lily/relocate.cc [HAVE_GETTEXT]: Include libintl.h.  Fixes mingw
	compile.

2005-12-20  Jan Nieuwenhuizen  <janneke@gnu.org>
