@@ -1,5 +1,11 @@
 2005-12-23  Han-Wen Nienhuys  <hanwen@xs4all.nl>
 
+	* lily/slur-configuration.cc (fit_factor): more robust check for
+	point in curve X-extent.
+
+	* lily/slur.cc (outside_slur_callback): return offset_scm, not 0.
+	(outside_slur_callback): check for 'outside avoidance.
+
 	* lily/slur-configuration.cc (score_extra_encompass): don't use
 	bound->column() == avoid->column() for checking extents, as this
 	doesn't work for accidentals. 
